<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-29dp"
            tools:layout_editor_absoluteY="0dp">
        <TextView
            android:id="@+id/abtGroupName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="Members"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/aboutPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/abtTitle"
            android:textColor="#FF9800"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/abtDescriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/abtDescriptionTxt"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/abtGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/abtGroupName"
            android:textSize="24sp" />

            <TextView
                android:id="@+id/janineTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/janineName"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/janineBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/janineBiography" />

            <TextView
                android:id="@+id/rafaelTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rafaelName"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/rafaelBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rafaelBiography" />

            <TextView
                android:id="@+id/syedTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/syedName"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/syedBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/syedBiography" />

            <TextView
                android:id="@+id/andreaTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/andreaName"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/andreaBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/andreaBiography" />

            <TextView
                android:id="@+id/lukeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lukeName"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lukeBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lukeBiography" />

            <TextView
                android:id="@+id/kennyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kennyName"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/kennyBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kennyBiography" />

            <TextView
                android:id="@+id/yasiraTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yasiraName"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/yasiraBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yasiraBiography" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>