<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity"
    android:background="@color/munchOrange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/rambla"
            android:text="welcome to"
            android:textSize="30sp"
            android:textColor="#FFFFFF"/>
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="269dp"
            android:layout_height="102dp"
            android:src="@drawable/full_logo"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="310dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:elevation="1dp"
            android:layout_gravity="center_horizontal"
            android:textColorHint="#FFFFFF"
            android:hint="@string/prompt_email"
            android:textColor="#FFFFFF"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="310dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#FFFFFF"
            android:elevation="1dp"
            android:hint="@string/prompt_password"
            android:textColorHint="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/rambla"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/login"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_shape_2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:enabled="true"
            android:fontFamily="@font/rambla"
            android:textColor="@color/munchOrangeDark"
            android:text="@string/action_sign_in" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>